clusters/managed/devbench/loki/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: loki-root-content-type
spec:
  headers:
    customResponseHeaders:
      Content-Type: text/plain; charset=utf-8
