clusters/managed/devbench/loki/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: loki
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://loki.trusted.nirmalhk7.com"
    gethomepage.dev/group: Devbench
    gethomepage.dev/description: "Log aggregation API"
    gethomepage.dev/icon: loki
    gethomepage.dev/app: loki
    gethomepage.dev/name: Loki
    gethomepage.dev/weight: "40"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`loki.trusted.nirmalhk7.com`)
      kind: Rule
      services:
        - name: loki-gateway
          port: 80
      middlewares:
        - name: mgd-headervalidation
